Fix padding to align menu options with logo and title

--- a/src/views/Landing/Sections/Header.css
+++ b/src/views/Landing/Sections/Header.css
@@ -4,3 +4,7 @@
     padding-right: 10px;
     cursor: pointer;
 }
+
+.menu-options {
+    padding-top: 10px;
+}
